--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.4" />
   </div>
 
+  <button id="reset-button" class="reset-button">Reiniciar</button>
+
   <audio id="bg-music" src="assets/music.mp3" loop></audio>
   <script src="script.js"></script>
 </body>
